--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>json-convert</artifactId>
 			<version>3.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>io.github.shmilyhe</groupId>
+			<artifactId>simple-jwt</artifactId>
+			<version>1.0.1</version>
+		</dependency>
 	</dependencies>
 	<distributionManagement>
 		<snapshotRepository>
